--- a/index.html
+++ b/index.html
@@ -21,31 +21,25 @@
 		<div class="form-container sign-up-container">
 			<form action="#">
 				<h1>Create Account</h1>
-				<div class="social-container">
-					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-				</div>
-				<span>or use your email for registration</span>
 				<input type="text" placeholder="Name" />
 				<input type="email" placeholder="Email" id="upmail" />
 				<!-- <input type="password" placeholder="Password" /> -->
 				<div class="password">
-					<div class="passimg" onclick="upimg(this)" id="s01"><img src="images\10.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s02"><img src="images\11.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s03"><img src="images\12.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s04"><img src="images\13.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s05"><img src="images\14.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s06"><img src="images\15.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s07"><img src="images\16.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s08"><img src="images\17.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s09"><img src="images\18.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s10"><img src="images\19.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s11"><img src="images\20.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s12"><img src="images\21.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s13"><img src="images\22.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s14"><img src="images\23.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="upimg(this)" id="s15"><img src="images\24.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s01"><img src="/images/1st.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s02"><img src="/images/2nd.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s03"><img src="/images/3rd.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s04"><img src="/images/4th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s05"><img src="/images/5th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s06"><img src="/images/6th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s07"><img src="/images/7th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s08"><img src="/images/8th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s09"><img src="/images/9th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s10"><img src="/images/10th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s11"><img src="/images/11th.png"alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s12"><img src="/images/12th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s13"><img src="/images/13th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s14"><img src="/images/14th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="upimg(this)" id="s15"><img src="/images/15th.png" alt="" class="patimg"></div>
 				</div>
 				<button id="signupbtn"  onclick="signup()">Sign Up</button>
 			</form>
@@ -53,30 +47,24 @@
 		<div class="form-container sign-in-container">
 			<form action="#">
 				<h1>Sign in</h1>
-				<div class="social-container">
-					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-				</div>
-				<span>or use your account</span>
 				<input type="email" placeholder="Email" id="inmail"/>
 				<!-- <input type="password" autocomplete="current-password" required placeholder="Password" /> -->
 				<div class="password">
-					<div class="passimg" onclick="inimg(this)" id="s01"><img src="images\10.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s02"><img src="images\11.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s03"><img src="images\12.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s04"><img src="images\13.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s05"><img src="images\14.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s06"><img src="images\15.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s07"><img src="images\16.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s08"><img src="images\17.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s09"><img src="images\18.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s10"><img src="images\19.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s11"><img src="images\20.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s12"><img src="images\21.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s13"><img src="images\22.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s14"><img src="images\23.png" alt="" class="patimg"></div>
-					<div class="passimg" onclick="inimg(this)" id="s15"><img src="images\24.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s01"><img src="/images/1st.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s02"><img src="/images/2nd.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s03"><img src="/images/3rd.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s04"><img src="/images/4th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s05"><img src="/images/5th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s06"><img src="/images/6th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s07"><img src="/images/7th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s08"><img src="/images/8th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s09"><img src="/images/9th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s10"><img src="/images/10th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s11"><img src="/images/11th.png"alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s12"><img src="/images/12th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s13"><img src="/images/13th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s14"><img src="/images/14th.png" alt="" class="patimg"></div>
+					<div class="passimg" onclick="inimg(this)" id="s15"><img src="/images/15th.png" alt="" class="patimg"></div>
 				</div>
 				<a  onclick="sendMail2()">Forgot your password?</a>
 				<button onclick="signin()">Sign In</button>
@@ -85,8 +73,8 @@
 		<div class="overlay-container">
 			<div class="overlay">
 				<div class="overlay-panel overlay-left">
-					<h1>Hi👋,there!</h1>
-					<p>Enter your personal details and start journey with us</p>
+					<h1>Hello! User</h1>
+					<p>Sign Up with our Graphical Authentication System</p>
 					<button class="ghost" id="signIn">Sign In</button>
 				</div>
 				<div class="overlay-panel overlay-right">
